[package]
name = "mock-gmp-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
dotenv = "0.15.0" 
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version= "0.8.6" , features = ["postgres", "runtime-tokio"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[[bin]]
path = "src/bin/client_main.rs"
name = "client"

[[bin]]
path = "src/bin/server_main.rs"
name = "server"