[package]
name = "mock-gmp-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
dotenv = "0.15.0" 
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version= "0.8.6" , features = ["postgres", "runtime-tokio", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.17.0", features = ["v4"] }
sha3 = "0.10"
hex = "0.4"
base64 = "0.22"
once_cell = "1.17"
lapin = "3.0.0"
async-trait = "0.1.88"

[dev-dependencies]
mockall = "0.13.1"
mockito = "1.6.1"
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }

[[bin]]
path = "src/bin/client_main.rs"
name = "client"

[[bin]]
path = "src/bin/server_main.rs"
name = "server"

[[bin]]
path = "src/bin/subscriber_main.rs"
name = "subscriber"
